--- a/index.html
+++ b/index.html
@@ -3,24 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="components/inicio.css" />
+    <link rel="stylesheet" href="components/juego.css" />
+    <link rel="stylesheet" href="components/final.css" />
+
     <link rel="stylesheet" href="./index.css" />
-    <title>Document</title>
+
+    <script defer src="./index.js" type="module"></script>
+
+    <title>Memory Poke</title>
   </head>
   <body>
-    <nav class="buttons-container">
-      <button class="button-poke" value="electric">Jugar</button>
-    </nav>
-    <main class="card-poke-container">
-      <!-- <article class="card-poke">
-        <div class="card-poke-img">
-          <img
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/25.png"
-            alt=""
-            class="poke-img"
-          />
-        </div>
-      </article> -->
-    </main>
-    <script src="./index.js" type="module"></script>
+    <div class="blur"></div>
+    <div class="index-container"></div>
   </body>
 </html>
